--- a/index.css
+++ b/index.css
@@ -1,6 +1,65 @@
+@font-face {
+    font-family: "font-1";
+    src: url(./fonts/WorkSans-VariableFont_wght.ttf);
+}
 * {
     box-sizing: border-box;
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+body {
+    font-family: "font-1";
+}
+a {
+    text-decoration: none;
+}
+header {
+    height: 100vh;
+    background: url(./assets/mercedes-class-s-couche-de-soleil.jpg) center/cover;
+    position: relative;
+}
+nav {
+    align-items: center;
+    padding: 50px 20px;
+    background-color: rgba(0, 0, 0, 0.253);
+}
+
+#menu ul {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+#menu ul li a {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: rgb(235, 235, 235);
+    transition: 0.2s ease-in-out;
+}
+#menu ul li a:hover {
+    padding: 30px 0;
+    border-bottom: 3px solid rgb(189, 189, 189);
+    border-top: 3px solid rgb(189, 189, 189);
+    color: rgb(189, 189, 189);
+}
+.driver-events {
+    text-align: center;
+}
+.logo img {
+    margin: 100px 0 200px;
+    width: 10%;
+}
+#h1 {
+    background-color: rgba(0, 0, 0, 0.644);
+    border: 1px solid rgb(235, 235, 235);
+    width: 590px;
+    margin: 20px auto;
+}
+#h1 h1 {
+    text-align: center;
+    color: rgb(235, 235, 235);
+    font-size: 4rem;
+    text-transform: uppercase;
 }
