--- a/index.css
+++ b/index.css
@@ -47,19 +47,57 @@ nav {
 .driver-events {
     text-align: center;
 }
-.logo img {
-    margin: 100px 0 200px;
-    width: 10%;
-}
+
 #h1 {
     background-color: rgba(0, 0, 0, 0.644);
     border: 1px solid rgb(235, 235, 235);
-    width: 590px;
-    margin: 20px auto;
+    width: 650px;
+    margin: 400px auto 100px;
 }
 #h1 h1 {
     text-align: center;
     color: rgb(235, 235, 235);
-    font-size: 4rem;
+    font-size: 5rem;
     text-transform: uppercase;
+}
+.arrow span {
+    text-align: center;
+    font-size: 4rem;
+    color: aliceblue;
+    cursor: pointer;
+}
+.logo img {
+    width: 10%;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+.arrow span:hover {
+    color: black;
+}
+#services {
+    height: 100vh;
+    background: url(./assets/cheval.jpg) center/cover;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 30px;
+    color: rgb(226, 226, 226);
+    border-top: 5px solid rgb(24, 24, 24);
+}
+.card-services {
+    background-color: rgb(27, 27, 27);
+    margin: 50px;
+    border-radius: 50px;
+    padding: 20px;
+    transition: 0.1s ease-in-out;
+    cursor: pointer;
+}
+.card-services:hover {
+    transform: scale(1.02);
+}
+
+.navettes img {
+    width: 30%;
 }
