--- a/index.css
+++ b/index.css
@@ -77,18 +77,25 @@ nav {
     color: black;
 }
 #services {
-    height: 100vh;
+    height: 900px;
     background: url(./assets/cheval.jpg) center/cover;
+    /* background-color: rgb(194, 194, 194); */
     text-align: center;
+    padding: 30px;
+    color: rgb(238, 238, 238);
+}
+.services-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 30px;
-    color: rgb(226, 226, 226);
+    width: 70%;
+    margin: 0 auto;
+    border: 3px solid rgb(27, 27, 27);
+    border-radius: 50px;
 }
 .card-services {
     background-color: rgb(27, 27, 27);
     box-shadow: 5px 5px 14px -6px #000000;
-    margin: 150px 50px;
+    margin: 50px 20px;
     border-radius: 50px;
     padding: 20px;
     transition: 0.1s ease-in-out;
@@ -100,12 +107,60 @@ nav {
 .card-services h2 {
     text-transform: uppercase;
     font-size: 2rem;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 .card-services p {
     width: 70%;
     margin: 0 auto;
 }
-.navettes img {
+.card-services img {
     width: 20%;
+}
+#apropos {
+    background-color: rgb(27, 27, 27);
+    height: 520px;
+    color: rgb(235, 235, 235);
+}
+.apropos-container {
+    text-align: center;
+    padding: 50px;
+    width: 70%;
+    margin: 0 auto;
+}
+.apropos-container h2 {
+    font-size: 3rem;
+    padding-bottom: 60px;
+    padding-top: -20px;
+}
+.apropos-container h3 {
+    font-size: 2rem;
+    padding-bottom: 30px;
+}
+.apropos-container p {
+    font-size: 1.5rem;
+    padding-bottom: 50px;
+}
+#atouts {
+    background-color: rgb(189, 189, 189);
+    height: 500px;
+}
+.atouts-container {
+    text-align: center;
+}
+.atouts-container h4 {
+    font-size: 2rem;
+    padding-bottom: 30px;
+    padding-top: 50px;
+}
+.atouts-container ul {
+    width: 50%;
+    text-align: left;
+    margin: 0 auto;
+}
+.atouts-container ul li {
+    list-style-type: circle;
+    font-size: 1.3rem;
+}
+.span {
+    margin: 50px 0 0 200px; 
 }
